@@ -493,6 +493,11 @@ if settings.startup["omnicompression_item_compression"].value and settings.start
                                     ingredients = new_val.ingredients,
                                     results = new_val.results,
                                     energy_required = math.max(0.0011, tid),
+                                    emissions_multiplier = recipe.emissions_multiplier,
+                                    maximum_productivity = recipe.maximum_productivity,
+                                    requester_paste_multiplier = recipe.requester_paste_multiplier,
+                                    overload_multiplier = recipe.overload_multiplier,
+                                    allow_inserter_overload = recipe.allow_inserter_overload,
                                     subgroup = recipe.subgroup,
                                     hide_from_player_crafting = recipe.hide_from_player_crafting or omni.compression.hide_handcraft,
                                     category = new_cat,
