@@ -3,6 +3,7 @@ Version: 4.2.6
 Date: ????
   Bugfixes:
     - Check for optional emissions on burner generator energy sources
+    - Added missing properties for recipe compression
 ---------------------------------------------------------------------------------------------------
 Version: 4.2.5
 Date: 2024.12.16
